[package]
name = "traceroute-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libpacket = "0.1.2"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1.38.0", features = ["full"] }
mio = { version = "0.8.6", features = ["os-poll", "net", "os-ext"] }
async-trait = "0.1.80"