[package]
name = "async-traceroute"
version = "0.1.2"
edition = "2021"
authors = ["vtramo <vv.tramo@gmail.com>"]
description = "Async Traceroute library/command-line tool"
repository = "https://github.com/vtramo/async-traceroute"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT"


[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
pnet="0.35.0"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
mio = { version = "0.8.6", features = ["os-poll", "net", "os-ext"] }
domain = { version = "0.10.1", features = ["resolv"] }
async-trait = "0.1.80"
async-stream = "0.3.5"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
humantime = "2.1.0"

[dev-dependencies]
ntest = "*"