[package]
name = "async-traceroute"
version = "0.1.2"
edition = "2021"
authors = ["vtramo <vv.tramo@gmail.com>"]
description = "Async Traceroute library/command-line tool"
repository = "https://github.com/vtramo/async-traceroute"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT"


[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["std", "derive", "wrap_help"] }
pnet = "0.35.0"
rand = { version = "0.8.5", default-features = false }
socket2 = "0.5.7"
tokio = { version = "1.38.0", features = ["sync", "time"]}
domain = { version = "0.10.1", default-features =  false, features = ["resolv"] }
async-trait = "0.1.80"
async-stream = "0.3.5"
futures = { version = "0.3.30", default-features = false }
humantime = "2.1.0"

[dev-dependencies]
ntest = "*"